grafana_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2020-07-26T13:06:16Z"
  generation: 1
  labels:
    app: grafana
  name: grafana
  namespace: grafana
  resourceVersion: "20145437"
  selfLink: /apis/apps/v1/namespaces/grafana/deployments/grafana
  uid: 48ef1a5d-6e79-4d35-9ef1-3adcb56b8413
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafana
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana
        imagePullPolicy: Always
        name: grafana
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-pvc
      volumes:
        - name: grafana-pvc
          persistentVolumeClaim:
            claimName: grafana-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
