ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
  generation: 1
  name: grafana
  namespace: grafana
spec:
  rules:
  - host: grafana.svc.k3s.ark
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
